# cryochamber

./: .gitignore  404.html  CLAUDE.md  Cargo.toml  Makefile  README.md  architecture.html  book.toml  build_errors.txt  commands.html  configuration.html  cryo-skill.md  faq.html  getting-started.html  github-sync.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-0ca1fefc.js  toc-4931a835.js  toc.html  web-ui.html  zulip-sync.html
.github/workflows/: ci.yml  cryo-wake.yml  docs.yml  release.yml
docs/: cryo-gh.md
docs/logo/: logo.typ
docs/plans/: 2026-02-22-cryochamber-design.md  2026-02-22-cryochamber-implementation.md  2026-02-24-multi-binary-design.md  2026-02-24-multi-binary-plan.md  2026-02-28-unexpected-behavior-tests-design.md  2026-02-28-unexpected-behavior-tests.md  2026-02-28-zulip-channel-design.md  2026-02-28-zulip-channel-plan.md
docs/src/: SUMMARY.md  architecture.md  commands.md  configuration.md  faq.md  getting-started.md  github-sync.md  introduction.md  web-ui.md  zulip-sync.md
examples/: chess-by-mail.html  mr-lazy.html
src/: agent.rs  config.rs  daemon.rs  fallback.rs  gh_sync.rs  lib.rs  log.rs  main.rs  marker.rs  message.rs  process.rs  protocol.rs  registry.rs  report.rs  service.rs  session.rs  socket.rs  state.rs  todo.rs  validate.rs  web.rs  zulip_sync.rs
templates/: Makefile  README.md  cryo.toml  plan.md  protocol.md  web.html
tests/: agent_tests.rs  channel_tests.rs  cli_edge_tests.rs  cli_tests.rs  config_tests.rs  daemon_tests.rs  fallback_tests.rs  gh_sync_tests.rs  github_channel_tests.rs  integration_test.rs  launchd_tests.rs  log_tests.rs  marker_tests.rs  message_tests.rs  mock_agent.sh  mock_agent_tests.rs  protocol_tests.rs  session_tests.rs  state_tests.rs  systemd_tests.rs  timer_mod_tests.rs  todo_tests.rs  validate_tests.rs  zulip_channel_tests.rs  zulip_sync_tests.rs
(+47 files in other folders)
