[package]
name = "cryochamber"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
fslock = "0.2"
lettre = "0.11"
plist = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
