[package]
name = "cryochamber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cryo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
fslock = "0.2"
lettre = "0.11"
plist = "1"
libc = "0.2"
shell-words = "1.1.1"
notify = "7"
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3"
