[package]
name = "cryochamber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cryo"
path = "src/bin/cryo.rs"

[[bin]]
name = "cryo-agent"
path = "src/bin/cryo_agent.rs"

[[bin]]
name = "cryo-gh"
path = "src/bin/cryo_gh.rs"

[[bin]]
name = "cryo-zulip"
path = "src/bin/cryo_zulip.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
fslock = "0.2"
lettre = "0.11"
plist = "1"
libc = "0.2"
shell-words = "1.1.1"
notify = "8"
signal-hook = "0.4"
dirs = "6.0.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
notify-rust = "4"
ureq = "3"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3"
